--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,7 +72,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/text_button_login"
-                    android:theme="@style/RaisedButtonDark"/>
+                    android:theme="@style/RaisedButtonDark"
+                    android:onClick="goLogin"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
