--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,8 +17,16 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
         <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" //Para que no se sobreponga-->
-        <include layout="@layout/cardview_picture"/> <!--llamamos al cardview-->
-        <include layout="@layout/cardview_picture"/> <!--llamamos al cardview-->
+
+        <!--<include layout="@layout/cardview_picture"/> llamamos al cardview-->
+        <!--<include layout="@layout/cardview_picture"/> llamamos al cardview-->
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/pictureRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
     </LinearLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
